--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,6 +10,6 @@ jobs:
       with:
         node-version: 12.x
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Run tests
       run: npm test
