--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,7 @@ jobs:
         run: npm test
   lint:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code ESLint
         uses: actions/checkout@v3
@@ -28,6 +29,7 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Build code
         uses: actions/checkout@v3
