--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,9 +1,12 @@
 name: Print Pull Request Context
-on: workflow_dispatch
-
+#on: [workflow_dispatch, pull_request]
+on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, edited, reopened, closed]
 jobs:
   print-pr-context:
     runs-on: ubuntu-latest
     steps:
       - name: Print PR Context
-        run: echo 'The PR number is ${{ toJSON(github) }}'
+        run: echo 'The PR number is ${{ toJSON(github.event) }}'
