--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,7 +3,45 @@ on:
   push:
     branches:
       - master
+#    paths-ignore:
+#      - '.github/workflows/*'
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      - name: Cache Dependency
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        run: npm test
+  lint:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code ESLint
+        uses: actions/checkout@v3
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      - name: Cache Dependency
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm install
+      - name: Run lint
+        run: npm lint:fix
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -12,12 +50,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+      - uses: actions/checkout@v3
+      - name: Cache Dependency
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
-      - name: Run tests
-        run: npm test
-      - name: Lint code
-        run: npm run lint
       - name: Deploy
         run: echo Deploying to GitHub Pages
 
