--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,10 +1,5 @@
 name: Deploy React App
-on:
-  push:
-    branches:
-      - master
-#    paths-ignore:
-#      - '.github/workflows/*'
+on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -40,17 +35,18 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
-      - name: Run lint
-        run: npm lint:fix
-  deploy:
+      - name: Lint code
+        run: npm run lint
+  build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
-      - uses: actions/checkout@v3
+      - name: Build code
+        uses: actions/checkout@v3
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - uses: actions/checkout@v3
       - name: Cache Dependency
         uses: actions/cache@v4
         with:
@@ -58,6 +54,9 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
+      - name: Build
+        run: npm run build
       - name: Deploy
         run: echo Deploying to GitHub Pages
+
 
