--- a/workflows-samples/deployment_steps.yml
+++ b/workflows-samples/deployment_steps.yml
@@ -43,3 +43,10 @@ jobs:
         run: npm run build
       - name: Deploy
         run: echo Deploying to GitHub Pages
+
+
+      - name: Cache Dependency
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
