--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -39,7 +39,7 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [lint, test]
     steps:
       - name: Build code
         uses: actions/checkout@v3
