--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,7 @@ jobs:
         run: npm test
   lint:
     runs-on: ubuntu-latest
-    needs: test
+#    needs: test
     steps:
       - name: Checkout code ESLint
         uses: actions/checkout@v3
