--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -38,15 +38,19 @@ jobs:
       - name: Lint code
         run: npm run lint
   build:
-    runs-on: ubuntu-latest
     needs: [lint, test]
+    strategy:
+        matrix:
+            node-version: [14, 16]
+            os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Build code
         uses: actions/checkout@v3
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: ${{matrix.node-version}}
       - name: Cache Dependency
         uses: actions/cache@v4
         with:
