--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -41,7 +41,7 @@ jobs:
     needs: [lint, test]
     strategy:
         matrix:
-            node-version: [14, 16]
+            node-version: [16.x]
             os: [ubuntu-latest, windows-latest, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
