--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,7 @@ jobs:
         run: npm test
   lint:
     runs-on: ubuntu-latest
-#    needs: test
+    #    needs: test
     steps:
       - name: Checkout code ESLint
         uses: actions/checkout@v3
@@ -39,10 +39,11 @@ jobs:
         run: npm run lint
   build:
     needs: [lint, test]
+    continue-on-error: true
     strategy:
-        matrix:
-            node-version: [16.x]
-            os: [ubuntu-latest, windows-latest, macOS-latest]
+      matrix:
+        node-version: [16.x]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Build code
@@ -62,5 +63,3 @@ jobs:
         run: npm run build
       - name: Deploy
         run: echo Deploying to GitHub Pages
-
-
