--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "prettier:fix": "prettier --write .",
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
