--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,3 +1,18 @@
+#name: Build
+#on: [push, workflow_dispatch]
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Use Node.js 16.x
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16.x
+#      - name: Cache Dependency
+#        uses: actions/cache@v4
+#        with:
+
 name: Deploy React App
 on: [push]
 jobs:
@@ -59,6 +74,8 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm install
+      - name: Run Prettier
+        run: npx prettier --write .
       - name: Build
         run: npm run build
       - name: Deploy
