--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,7 +1,29 @@
-#name: Build
-#on: [push, workflow_dispatch]
+name: Build
+on: [push, workflow_dispatch]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get the code
+        uses: actions/checkout@v3
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: build
+          name: build-files
+
+#name: Deploy React App
+#on: [push]
 #jobs:
-#  build:
+#  test:
 #    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@v3
@@ -12,71 +34,56 @@
 #      - name: Cache Dependency
 #        uses: actions/cache@v4
 #        with:
-
-name: Deploy React App
-on: [push]
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-      - name: Cache Dependency
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm install
-      - name: Run tests
-        run: npm test
-  lint:
-    runs-on: ubuntu-latest
-    #    needs: test
-    steps:
-      - name: Checkout code ESLint
-        uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-      - name: Cache Dependency
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm install
-      - name: Lint code
-        run: npm run lint
-  build:
-    needs: [lint, test]
-    continue-on-error: true
-    strategy:
-      matrix:
-        node-version: [16.x]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Build code
-        uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{matrix.node-version}}
-      - name: Cache Dependency
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm install
-      - name: Run Prettier
-        run: npx prettier --write .
-      - name: Build
-        run: npm run build
-      - name: Deploy
-        run: echo Deploying to GitHub Pages
+#          path: ~/.npm
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Run tests
+#        run: npm test
+#  lint:
+#    runs-on: ubuntu-latest
+#    #    needs: test
+#    steps:
+#      - name: Checkout code ESLint
+#        uses: actions/checkout@v3
+#      - name: Use Node.js 16.x
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16.x
+#      - name: Cache Dependency
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/.npm
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Lint code
+#        run: npm run lint
+#  build:
+#    needs: [lint, test]
+#    continue-on-error: true
+#    strategy:
+#      matrix:
+#        node-version: [16.x]
+#        os: [ubuntu-latest, windows-latest, macOS-latest]
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#      - name: Build code
+#        uses: actions/checkout@v3
+#      - name: Use Node.js 16.x
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: ${{matrix.node-version}}
+#      - name: Cache Dependency
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/.npm
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Run Prettier
+#        run: npx prettier --write .
+#      - name: Build
+#        run: npm run build
+#      - name: Deploy
+#        run: echo Deploying to GitHub Pages
