--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -6,7 +6,7 @@ env:
 #  GITHUB_REPOSITORY: ${{ github.repository }}
 #  GITHUB_SHA: ${{ github.sha }}
   NODE_ENV: production
-  GH_SECRET: 42
+  GH_SECRET: ${{ secrets.DEPLOY_SECRET }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,6 +19,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      NODE_ENV: production-deploy
+      GH_SECRET: 42
     steps:
       - name: Print Env
         run: |
