--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "npm run lint"
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
